--- a/lhy/gui/gui.vcxproj
+++ b/lhy/gui/gui.vcxproj
@@ -76,7 +76,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)gui\3rdparty\HiEasyX;$(SolutionDir)gui\3rdparty\HiEasyX\HiEasyX</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)gui\3rdparty\WinBGIm\inc;$(SolutionDir)gui\inc</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -91,7 +91,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)gui\3rdparty\HiEasyX;$(SolutionDir)gui\3rdparty\HiEasyX\HiEasyX</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)gui\3rdparty\WinBGIm\inc;$(SolutionDir)gui\inc</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -121,7 +121,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)gui\3rdparty\HiEasyX;$(SolutionDir)gui\3rdparty\HiEasyX\HiEasyX</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)gui\3rdparty\WinBGIm\inc;$(SolutionDir)gui\inc</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -132,6 +132,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="src\lsCanvas.cpp" />
+    <ClCompile Include="src\lsEntity.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="inc\lsCanvas.h" />
+    <ClInclude Include="inc\lsEntity.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
