--- a/lhy/gui/gui.vcxproj.filters
+++ b/lhy/gui/gui.vcxproj.filters
@@ -13,6 +13,12 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="dxflib">
+      <UniqueIdentifier>{09adb2d0-6093-49ec-89f5-bc569ce4696e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="entity">
+      <UniqueIdentifier>{2112ce07-8f21-4d81-bcaa-94276b2f6f40}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -24,13 +30,25 @@
     <ClCompile Include="src\lsEntity.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="src\dxflib\lsDxf.cpp">
+      <Filter>dxflib</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="inc\lsCanvas.h">
-      <Filter>头文件</Filter>
+    <ClInclude Include="src\lsCanvas.h">
+      <Filter>源文件</Filter>
     </ClInclude>
-    <ClInclude Include="inc\lsEntity.h">
-      <Filter>头文件</Filter>
+    <ClInclude Include="src\lsEntity.h">
+      <Filter>源文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\dxflib\lsDxf.h">
+      <Filter>dxflib</Filter>
+    </ClInclude>
+    <ClInclude Include="src\entity\lsLine.h">
+      <Filter>entity</Filter>
+    </ClInclude>
+    <ClInclude Include="src\entity\lsPoint.h">
+      <Filter>entity</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
