2023102401-显示时图形平移到窗口中心，并且将Y轴变换到窗口坐标系，修改源码文件编码为UTF-8

--- a/lhy/gui/gui.vcxproj.filters
+++ b/lhy/gui/gui.vcxproj.filters
@@ -27,9 +27,6 @@
     <ClCompile Include="src\lsCanvas.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="src\lsEntity.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="src\dxflib\lsDxf.cpp">
       <Filter>dxflib</Filter>
     </ClCompile>
@@ -42,12 +39,12 @@
     <ClCompile Include="src\entity\lsLine.cpp">
       <Filter>entity</Filter>
     </ClCompile>
+    <ClCompile Include="src\entity\lsEntity.cpp">
+      <Filter>entity</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\lsCanvas.h">
-      <Filter>源文件</Filter>
-    </ClInclude>
-    <ClInclude Include="src\lsEntity.h">
       <Filter>源文件</Filter>
     </ClInclude>
     <ClInclude Include="src\dxflib\lsDxf.h">
@@ -63,6 +60,9 @@
       <Filter>entity</Filter>
     </ClInclude>
     <ClInclude Include="src\entity\lsCircle.h">
+      <Filter>entity</Filter>
+    </ClInclude>
+    <ClInclude Include="src\entity\lsEntity.h">
       <Filter>entity</Filter>
     </ClInclude>
   </ItemGroup>
