--- a/lhy/gui/gui.vcxproj
+++ b/lhy/gui/gui.vcxproj
@@ -135,18 +135,18 @@
     <ClCompile Include="src\dxflib\lsDxf.cpp" />
     <ClCompile Include="src\entity\lsBoundbox.cpp" />
     <ClCompile Include="src\entity\lsCircle.cpp" />
+    <ClCompile Include="src\entity\lsEntity.cpp" />
     <ClCompile Include="src\entity\lsLine.cpp" />
     <ClCompile Include="src\lsCanvas.cpp" />
-    <ClCompile Include="src\lsEntity.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\dxflib\lsDxf.h" />
     <ClInclude Include="src\entity\lsBoundbox.h" />
     <ClInclude Include="src\entity\lsCircle.h" />
+    <ClInclude Include="src\entity\lsEntity.h" />
     <ClInclude Include="src\entity\lsLine.h" />
     <ClInclude Include="src\entity\lsPoint.h" />
     <ClInclude Include="src\lsCanvas.h" />
-    <ClInclude Include="src\lsEntity.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
