2023102800-增加鼠标键盘操作逻辑，修复图形放缩的bug

--- a/lhy/gui/gui.vcxproj
+++ b/lhy/gui/gui.vcxproj
@@ -137,6 +137,7 @@
     <ClCompile Include="src\entity\lsCircle.cpp" />
     <ClCompile Include="src\entity\lsEntity.cpp" />
     <ClCompile Include="src\entity\lsLine.cpp" />
+    <ClCompile Include="src\entity\lsPoint.cpp" />
     <ClCompile Include="src\lsCanvas.cpp" />
   </ItemGroup>
   <ItemGroup>
