20231107 使用向量的缩放更新构造圆弧的三点实现圆弧的缩放 在鼠标滚轮部分更新显示中心

--- a/lwj/gui/gui.vcxproj.filters
+++ b/lwj/gui/gui.vcxproj.filters
@@ -49,7 +49,7 @@
       <Filter>entity</Filter>
     </ClCompile>
     <ClCompile Include="lsVector.cpp">
-      <Filter>源文件</Filter>
+      <Filter>entity</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -78,10 +78,10 @@
       <Filter>entity</Filter>
     </ClInclude>
     <ClInclude Include="src\entity\lsGlobal.h">
-      <Filter>头文件</Filter>
+      <Filter>entity</Filter>
     </ClInclude>
     <ClInclude Include="src\entity\lsVector.h">
-      <Filter>头文件</Filter>
+      <Filter>entity</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
