2023111300-重构了实体接口，改用向量参与运算，重构缩放逻辑，还有bug

--- a/lhy/gui/gui.vcxproj.filters
+++ b/lhy/gui/gui.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="src\entity\lsArc.cpp">
       <Filter>entity</Filter>
     </ClCompile>
+    <ClCompile Include="src\entity\lsCoordSystem.cpp">
+      <Filter>entity</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\lsCanvas.h">
@@ -81,6 +84,9 @@
       <Filter>entity</Filter>
     </ClInclude>
     <ClInclude Include="src\entity\lsArc.h">
+      <Filter>entity</Filter>
+    </ClInclude>
+    <ClInclude Include="src\entity\lsCoordSystem.h">
       <Filter>entity</Filter>
     </ClInclude>
   </ItemGroup>
