--- a/lhy/gui/gui.vcxproj
+++ b/lhy/gui/gui.vcxproj
@@ -136,6 +136,7 @@
     <ClCompile Include="src\entity\lsArc.cpp" />
     <ClCompile Include="src\entity\lsBoundbox.cpp" />
     <ClCompile Include="src\entity\lsCircle.cpp" />
+    <ClCompile Include="src\entity\lsCoordSystem.cpp" />
     <ClCompile Include="src\entity\lsEntity.cpp" />
     <ClCompile Include="src\entity\lsLine.cpp" />
     <ClCompile Include="src\entity\lsPoint.cpp" />
@@ -147,6 +148,7 @@
     <ClInclude Include="src\entity\lsArc.h" />
     <ClInclude Include="src\entity\lsBoundbox.h" />
     <ClInclude Include="src\entity\lsCircle.h" />
+    <ClInclude Include="src\entity\lsCoordSystem.h" />
     <ClInclude Include="src\entity\lsEntity.h" />
     <ClInclude Include="src\entity\lsGlobal.h" />
     <ClInclude Include="src\entity\lsLine.h" />
