--- a/lwj/gui/gui.vcxproj.filters
+++ b/lwj/gui/gui.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="lsVector.cpp">
       <Filter>entity</Filter>
     </ClCompile>
+    <ClCompile Include="lsCoordSystem.cpp">
+      <Filter>entity</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\lsCanvas.h">
@@ -81,6 +84,9 @@
       <Filter>entity</Filter>
     </ClInclude>
     <ClInclude Include="src\entity\lsVector.h">
+      <Filter>entity</Filter>
+    </ClInclude>
+    <ClInclude Include="src\entity\lsCoordSystem.h">
       <Filter>entity</Filter>
     </ClInclude>
   </ItemGroup>
