--- a/lhy/gui/gui.vcxproj
+++ b/lhy/gui/gui.vcxproj
@@ -76,7 +76,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)gui\src;$(SolutionDir)gui\src\dxflib;$(SolutionDir)gui\src\entity;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)gui\src;$(SolutionDir)gui\src\dxflib;$(SolutionDir)gui\src\entity;$(SolutionDir)gui\src\tools</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -91,7 +91,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)gui\src;$(SolutionDir)gui\src\dxflib;$(SolutionDir)gui\src\entity;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)gui\src;$(SolutionDir)gui\src\dxflib;$(SolutionDir)gui\src\entity;$(SolutionDir)gui\src\tools</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -106,7 +106,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)gui\src;$(SolutionDir)gui\src\dxflib;$(SolutionDir)gui\src\entity;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)gui\src;$(SolutionDir)gui\src\dxflib;$(SolutionDir)gui\src\entity;$(SolutionDir)gui\src\tools</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -121,7 +121,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)gui\src;$(SolutionDir)gui\src\dxflib;$(SolutionDir)gui\src\entity;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)gui\src;$(SolutionDir)gui\src\dxflib;$(SolutionDir)gui\src\entity;$(SolutionDir)gui\src\tools</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -142,6 +142,7 @@
     <ClCompile Include="src\entity\lsPoint.cpp" />
     <ClCompile Include="src\entity\lsVector.cpp" />
     <ClCompile Include="src\lsCanvas.cpp" />
+    <ClCompile Include="src\tools\lsRandom.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\dxflib\lsDxf.h" />
@@ -155,6 +156,7 @@
     <ClInclude Include="src\entity\lsPoint.h" />
     <ClInclude Include="src\entity\lsVector.h" />
     <ClInclude Include="src\lsCanvas.h" />
+    <ClInclude Include="src\tools\lsRandom.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
