--- a/lhy/wxApp/wxApp.vcxproj.filters
+++ b/lhy/wxApp/wxApp.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
+    <ClCompile Include="src\minimal.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
