--- a/lhy/wxApp/wxApp.vcxproj
+++ b/lhy/wxApp/wxApp.vcxproj
@@ -19,7 +19,13 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\minimal.cpp" />
+    <ClCompile Include="src\lsApp.cpp" />
+    <ClCompile Include="src\lsFrame.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\lsApp.h" />
+    <ClInclude Include="src\lsCommon.h" />
+    <ClInclude Include="src\lsFrame.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
@@ -79,7 +85,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(ENV_wxWidgets)\include;$(ENV_wxWidgets)\include\msvc;$(ProjectDir)src;$(SolutionDir)res</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ENV_wxWidgets)\include;$(ENV_wxWidgets)\include\msvc</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -95,7 +101,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(ENV_wxWidgets)\include;$(ENV_wxWidgets)\include\msvc;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ENV_wxWidgets)\include;$(ENV_wxWidgets)\include\msvc</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -111,7 +117,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_UNICODE</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(ENV_wxWidgets)\include;$(ENV_wxWidgets)\include\msvc;$(ProjectDir)src;$(SolutionDir)res</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ENV_wxWidgets)\include;$(ENV_wxWidgets)\include\msvc;$(SolutionDir)\res</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -127,7 +133,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_UNICODE</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(ENV_wxWidgets)\include;$(ENV_wxWidgets)\include\msvc;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ENV_wxWidgets)\include;$(ENV_wxWidgets)\include\msvc;$(SolutionDir)\res</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
