--- a/lhy/wxApp/wxApp.vcxproj.filters
+++ b/lhy/wxApp/wxApp.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="src\lsFrame.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="src\lsCanvas.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\lsApp.h">
@@ -30,6 +33,9 @@
       <Filter>源文件</Filter>
     </ClInclude>
     <ClInclude Include="src\lsFrame.h">
+      <Filter>源文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\lsCanvas.h">
       <Filter>源文件</Filter>
     </ClInclude>
   </ItemGroup>
